themeable package ready for use with basic elements

--- a/RNProject/src/locale/en/index.json
+++ b/RNProject/src/locale/en/index.json
@@ -42,5 +42,5 @@
    "menu-create-team": "Create Business account",
    "update-btn": "Update",
    "email_change_notice": "You should not change your email address!",
-   "deals_i_like": "Deals i like"
+   "Register": "Create account"
 }
