Splashscreen with offlinescreen support

--- a/RNProject/src/locale/en/index.json
+++ b/RNProject/src/locale/en/index.json
@@ -1,4 +1,5 @@
 {
+   "offline_title": "You are offline.",
    "welcome_note": "Recent transactions",
    "recent_transactions": "Recent transactions",
    "rewards": "Rewards",
