--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -13,6 +13,7 @@
    "phone": "Mobile no.",
    "email": "E-Mail",
    "name": "Name",
+   "middle_name": "Middle name",
    "preferences": "Preferences",
    "notifications": "Notifications",
    "wishlist": "Wishlist",
@@ -25,6 +26,11 @@
    "menu-team-members": "Business members",
    "first_name": "Name",
    "last_name": "Surname",
+   "address_line": "Address",
+   "address_line_2": "Address line 2",
+   "city": "City",
+   "state": "State / Province",
+   "postal_code": "Postal code / Zip",
    "change-password": "Change password",
    "linked-accounts": "Linked accounts",
    "terms-menu": "Terms & Conditions",
