offline page fine tuned

--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -1,5 +1,6 @@
 {
    "offline_title": "You are offline.",
+   "offline_description": "Check your internet connection and try again.",
    "welcome_note": "Recent transactions",
    "recent_transactions": "Recent transactions",
    "rewards": "Rewards",
