added fields in profile edit form

--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -13,6 +13,7 @@
    "regd_at": "Regd. at",
    "phone": "Mobile no.",
    "email": "E-Mail",
+   "birth_date": "Birth date",
    "name": "Name",
    "middle_name": "Middle name",
    "preferences": "Preferences",
