registration form fields updated, refactored

--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -14,6 +14,16 @@
    "phone": "Mobile no.",
    "email": "E-Mail",
    "birth_date": "Birth date",
+   "password": "Password",
+   "btn_register": "Create account",
+   "already_registered": "Already registered? Login here",
+   "accept_terms_line": "By creating account you are agreed to the terms and conditions of our app.",
+   "btn_guest_login": "Guest login",
+   "password_forgot_query": "Lost or forgot password?",
+   "new_register_cta": "Don't have account? ",
+   "btn_password_request": "Request password",
+   "btn_login": "Login",
+   "support_link": "Support",
    "name": "Name",
    "middle_name": "Middle name",
    "preferences": "Preferences",
