--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -15,6 +15,7 @@
    "email": "E-Mail",
    "birth_date": "Birth date",
    "password": "Password",
+   "market_menu": "Explore",
    "btn_register": "Create account",
    "already_registered": "Already registered? Login here",
    "accept_terms_line": "By creating account you are agreed to the terms and conditions of our app.",
