rewards screen added and card component updated

--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -7,7 +7,7 @@
    "rewards_desc": "Rewards earned by referring to friends & others.",
    "refer_earn": "Refer & earn",
    "home_menu": "Home",
-   "dashboard_menu": "Orders",
+   "dashboard_menu": "Dashboard",
    "profile_menu": "Profile",
    "referral_code": "Referral code",
    "regd_at": "Regd. at",
