fixed gesture-handler and auth screens

--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -16,6 +16,9 @@
    "birth_date": "Birth date",
    "password": "Password",
    "market_menu": "Explore",
+   "login_back": "Just kidding, i remembered.",
+   "btn_change_password": "Set password",
+   "cancel": "Cancel",
    "verification_description": "To create an account let's first verify that this your number",
    "btn_register": "Create account",
    "already_registered": "Already registered? Login here",
@@ -59,7 +62,9 @@
    "about": "About",
    "update_name_title": "Update your name",
    "update_email_title": "Update your e-mail",
-   "update_name_btn": "Update name",
+   "btn_update_name": "Update name",
+   "btn_update_email": "Update email",
+   "btn_update_phone": "Update mobile number",
    "menu-create-team": "Create Business account",
    "update-btn": "Update",
    "email_change_notice": "You should not change your email address!",
