--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -1,5 +1,6 @@
 {
    "offline_title": "You are offline.",
+   "offline_description": "Check your internet connection and try again.",
    "welcome_note": "Recent transactions",
    "recent_transactions": "Recent transactions",
    "rewards": "Rewards",
@@ -12,7 +13,19 @@
    "regd_at": "Regd. at",
    "phone": "Mobile no.",
    "email": "E-Mail",
+   "birth_date": "Birth date",
+   "password": "Password",
+   "btn_register": "Create account",
+   "already_registered": "Already registered? Login here",
+   "accept_terms_line": "By creating account you are agreed to the terms and conditions of our app.",
+   "btn_guest_login": "Guest login",
+   "password_forgot_query": "Lost or forgot password?",
+   "new_register_cta": "Don't have account? ",
+   "btn_password_request": "Request password",
+   "btn_login": "Login",
+   "support_link": "Support",
    "name": "Name",
+   "middle_name": "Middle name",
    "preferences": "Preferences",
    "notifications": "Notifications",
    "wishlist": "Wishlist",
@@ -25,6 +38,11 @@
    "menu-team-members": "Business members",
    "first_name": "Name",
    "last_name": "Surname",
+   "address_line": "Address",
+   "address_line_2": "Address line 2",
+   "city": "City",
+   "state": "State / Province",
+   "postal_code": "Postal code / Zip",
    "change-password": "Change password",
    "linked-accounts": "Linked accounts",
    "terms-menu": "Terms & Conditions",
