added permissions module, map themes

--- a/RNProject/src/locale/en.json
+++ b/RNProject/src/locale/en.json
@@ -68,5 +68,9 @@
    "market_menu": "Explore",
    "btn_save_address": "Save address",
    "btn_cancel": "Cancel",
+   "push_notification": "Push notification",
+   "push_notification_description": "Recieve important alerts",
+   "geo_location": "GEO Location",
+   "geo_location_description": "Allow to serve better near you",
    "Register": "Create account"
 }
